[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/navItem.gd" type="Script" id=1]
[ext_resource path="res://resource/icons/home.svg" type="Texture" id=2]

[node name="navItem" type="Control" groups=["navItem"]]
margin_top = 50.0
margin_right = 70.0
margin_bottom = 100.0
rect_min_size = Vector2( 70, 50 )
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
margin_top = -2.0
margin_right = 70.0
margin_bottom = 48.0
rect_min_size = Vector2( 70, 50 )
mouse_filter = 2
color = Color( 0.317647, 0.0745098, 0.47451, 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 72.0
margin_right = 82.0
text = "Inicio"

[node name="ico" type="Sprite" parent="."]
position = Vector2( 32, 22 )
texture = ExtResource( 2 )

[node name="active" type="ColorRect" parent="."]
margin_top = -2.0
margin_right = 10.0
margin_bottom = 48.0
mouse_filter = 2
color = Color( 0.729412, 0.247059, 0.552941, 1 )

[connection signal="gui_input" from="." to="." method="_on_navItem_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_navItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_navItem_mouse_exited"]
